syntax = "proto3";

package car_service;

message ServicePart {
  int32 id = 1;
  int32 order_id = 2;
  int32 vehicle_part_id = 3;
  int32 quantity = 4;
}
